errors.txt
/tmp/ccnMgD6c.s: Assembler messages:
/tmp/ccnMgD6c.s:110: Warning: setting incorrect section attributes for .data.ramfuncs
/home/build/prjclone/pxtapp/core/serial.cpp:252:13: warning: 'void pxt::sendString(const char*, int)' defined but not used [-Wunused-function]
 static void sendString(const char *c, int len) {
             ^~~~~~~~~~
In file included from /home/build/prjclone/pxtapp/pointers.cpp:7:0:
/home/build/prjclone/pxtapp/st7735/config_nrf.h:19:0: warning: "CFG_PIN_NAME_MSK" redefined
 #define CFG_PIN_NAME_MSK = 65535
 
In file included from /home/build/prjclone/pxtapp/pxtbase.h:21:0,
                 from /home/build/prjclone/pxtapp/pxt.h:8,
                 from /home/build/prjclone/pxtapp/pointers.cpp:1:
TypeError: Cannot read properties of null (reading 'length')
    at compressHex (/home/runner/work/pxt-microbit/pxt-microbit/node_modules/pxt-core/built/pxt.js:105228:37)
    at /home/runner/work/pxt-microbit/pxt-microbit/node_modules/pxt-core/built/pxt.js:105157:36
    at processTicksAndRejections (node:internal/process/task_queues:96:5)
    at async fillExtInfoAsync (/home/runner/work/pxt-microbit/pxt-microbit/node_modules/pxt-core/built/pxt.js:114031:51)
    at async MainPackage.getCompileOptionsAsync (/home/runner/work/pxt-microbit/pxt-microbit/node_modules/pxt-core/built/pxt.js:114076:33)
    at async /home/runner/work/pxt-microbit/pxt-microbit/node_modules/pxt-core/built/pxt.js:162655:19
    at async /home/runner/work/pxt-microbit/pxt-microbit/node_modules/pxt-core/built/pxt.js:99437:42
    at async Promise.all (index 0)
    at async promisePoolAsync (/home/runner/work/pxt-microbit/pxt-microbit/node_modules/pxt-core/built/pxt.js:99443:21)
    at async buildTargetCoreAsync (/home/runner/work/pxt-microbit/pxt-microbit/node_modules/pxt-core/built/pxt.js:162637:5)
/home/build/prjclone/pxtapp/configkeys.h:6:0: note: this is the location of the previous definition
 #define CFG_PIN_NAME_MSK 0x0000ffff
 
/home/build/prjclone/pxtapp/core/sendbufferbrightness.s: Assembler messages:
/home/build/prjclone/pxtapp/core/sendbufferbrightness.s: Warning: end of file not at end of a line; newline inserted
In file included from /home/build/prjclone/pxtapp/st7735/panic.cpp:6:0:
/home/build/prjclone/pxtapp/st7735/config_nrf.h:19:0: warning: "CFG_PIN_NAME_MSK" redefined
 #define CFG_PIN_NAME_MSK = 65535
 
In file included from /home/build/prjclone/pxtapp/pxtbase.h:21:0,
                 from /home/build/prjclone/pxtapp/pxt.h:8,
                 from /home/build/prjclone/pxtapp/st7735/panic.cpp:1:
/home/build/prjclone/pxtapp/configkeys.h:6:0: note: this is the location of the previous definition
 #define CFG_PIN_NAME_MSK 0x0000ffff
 
In file included from /home/build/prjclone/pxtapp/st7735/screen.cpp:12:0:
/home/build/prjclone/pxtapp/st7735/config_nrf.h:19:0: warning: "CFG_PIN_NAME_MSK" redefined
 #define CFG_PIN_NAME_MSK = 65535
 
In file included from /home/build/prjclone/pxtapp/pxtbase.h:21:0,
                 from /home/build/prjclone/pxtapp/pxt.h:8,
                 from /home/build/prjclone/pxtapp/st7735/screen.cpp:1:
/home/build/prjclone/pxtapp/configkeys.h:6:0: note: this is the location of the previous definition
 #define CFG_PIN_NAME_MSK 0x0000ffff
 

 
In file included from /home/build/prjclone/pxtapp/pointers.cpp:7:0:
/home/build/prjclone/pxtapp/st7735/config_nrf.h:38:9: error: 'CODAL_PIN' does not name a type
 typedef CODAL_PIN DevicePin;
         ^~~~~~~~~
In file included from /home/build/prjclone/pxtapp/pointers.cpp:1:0:
/home/build/prjclone/pxtapp/pxt.h:39:16: error: 'MButton' does not name a type
 #define Button MButton
                ^
/home/build/prjclone/pxtapp/st7735/config_nrf.h:46:9: note: in expansion of macro 'Button'
 typedef Button *Button_;
         ^~~~~~
/home/build/prjclone/pxtapp/pointers.cpp:365:13: error: 'CODAL_PIN' does not name a type
     typedef CODAL_PIN DevicePin;
             ^~~~~~~~~
make[2]: *** [CMakeFiles/MICROBIT.dir/pxtapp/pointers.cpp.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
/home/build/prjclone/pxtapp/st7735/config_nrf.cpp:6:23: error: 'DEV_NUM_PINS' was not declared in this scope
 static uint8_t pinPos[DEV_NUM_PINS];
                       ^~~~~~~~~~~~
/home/build/prjclone/pxtapp/st7735/config_nrf.cpp: In function 'pxt::DevicePin* pxt::getPin(int)':
/home/build/prjclone/pxtapp/st7735/config_nrf.cpp:12:15: error: 'DEV_NUM_PINS' was not declared in this scope
     if (id >= DEV_NUM_PINS)
               ^~~~~~~~~~~~
/home/build/prjclone/pxtapp/st7735/config_nrf.cpp:17:15: error: 'pinPos' was not declared in this scope
     int ptr = pinPos[id];
               ^~~~~~
/home/build/prjclone/pxtapp/st7735/config_nrf.cpp:20:41: error: 'IS_ANALOG_PIN' was not declared in this scope
         bool isAnalog = IS_ANALOG_PIN(id);
                                         ^
make[2]: *** [CMakeFiles/MICROBIT.dir/pxtapp/st7735/config_nrf.cpp.obj] Error 1
/home/build/prjclone/pxtapp/st7735/jddisplay.cpp: In member function 'void pxt::JDDisplay::handleIncoming(jd_packet_t*)':
/home/build/prjclone/pxtapp/st7735/jddisplay.cpp:161:52: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
             soundBufferPending = *(uint32_t *)pkt->data;
                                                    ^~~~
/home/build/prjclone/pxtapp/st7735/jddisplay.cpp:164:49: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
             soundSampleRate = *(uint32_t *)pkt->data >> 10;
                                                 ^~~~
/home/build/prjclone/pxtapp/st7735/jddisplay.cpp:170:46: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
             screenHeight = *(uint16_t *)pkt->data;
                                              ^~~~
/home/build/prjclone/pxtapp/st7735/jddisplay.cpp:173:45: warning: dereferencing type-punned pointer will break strict-aliasing rules [-Wstrict-aliasing]
             screenWidth = *(uint16_t *)pkt->data;
                                             ^~~~
/home/build/prjclone/pxtapp/st7735/jddisplay.cpp:209:27: error: 'PXT_INTERNAL_KEY_DOWN' was not declared in this scope
                     Event(PXT_INTERNAL_KEY_DOWN, i);
                           ^~~~~~~~~~~~~~~~~~~~~
/home/build/prjclone/pxtapp/st7735/jddisplay.cpp:211:27: error: 'PXT_INTERNAL_KEY_UP' was not declared in this scope
                     Event(PXT_INTERNAL_KEY_UP, i);
                           ^~~~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/MICROBIT.dir/pxtapp/st7735/jddisplay.cpp.obj] Error 1
In file included from /home/build/prjclone/pxtapp/st7735/panic.cpp:6:0:
/home/build/prjclone/pxtapp/st7735/config_nrf.h:38:9: error: 'CODAL_PIN' does not name a type
 typedef CODAL_PIN DevicePin;
         ^~~~~~~~~
In file included from /home/build/prjclone/pxtapp/st7735/panic.cpp:1:0:
/home/build/prjclone/pxtapp/pxt.h:39:16: error: 'MButton' does not name a type
 #define Button MButton
                ^
/home/build/prjclone/pxtapp/st7735/config_nrf.h:46:9: note: in expansion of macro 'Button'
 typedef Button *Button_;
         ^~~~~~
In file included from /home/build/prjclone/pxtapp/st7735/screen.cpp:12:0:
/home/build/prjclone/pxtapp/st7735/config_nrf.h:38:9: error: 'CODAL_PIN' does not name a type
 typedef CODAL_PIN DevicePin;
         ^~~~~~~~~
In file included from /home/build/prjclone/pxtapp/st7735/screen.cpp:1:0:
/home/build/prjclone/pxtapp/pxt.h:39:16: error: 'MButton' does not name a type
 #define Button MButton
                ^
/home/build/prjclone/pxtapp/st7735/config_nrf.h:46:9: note: in expansion of macro 'Button'
 typedef Button *Button_;
         ^~~~~~
/home/build/prjclone/pxtapp/st7735/screen.cpp: In constructor 'pxt::WDisplay::WDisplay()':
/home/build/prjclone/pxtapp/st7735/screen.cpp:60:23: error: expected type-specifier before 'CODAL_SPI'
             spi = new CODAL_SPI(*LOOKUP_PIN(DISPLAY_MOSI), *miso, *LOOKUP_PIN(DISPLAY_SCK));
                       ^~~~~~~~~
In file included from /home/build/prjclone/pxtapp/st7735/screen.cpp:12:0:
/home/build/prjclone/pxtapp/st7735/config_nrf.h:2:27: error: expected primary-expression before '=' token
 #define MY_DISPLAY_HEIGHT = 128
                           ^
/home/build/prjclone/pxtapp/st7735/screen.cpp:124:18: note: in expansion of macro 'MY_DISPLAY_HEIGHT'
         height = MY_DISPLAY_HEIGHT;
                  ^~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/MICROBIT.dir/pxtapp/st7735/panic.cpp.obj] Error 1
/home/build/prjclone/pxtapp/st7735/screen.cpp: In member function 'uint32_t pxt::WDisplay::smartConfigure(uint32_t*, uint32_t*, uint32_t*)':
/home/build/prjclone/pxtapp/st7735/screen.cpp:151:42: error: 'readButtonMultiplexer' was not declared in this scope
             hc = readButtonMultiplexer(17);
                                          ^
/home/build/prjclone/pxtapp/st7735/screen.cpp:169:38: error: 'disableButtonMultiplexer' was not declared in this scope
             disableButtonMultiplexer();
                                      ^